--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,9 +13,9 @@ html {
   font-family: "Montserrat";
   width: 100%;
   height: 100%;
-  -webkit-user-select: none;
+  /* -webkit-user-select: none;
   -ms-user-select: none;
-  user-select: none;
+  user-select: none; */
   background-color: #fff;
 }
 
