--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,9 +13,9 @@ html {
   font-family: "Montserrat";
   width: 100%;
   height: 100%;
-  /* -webkit-user-select: none;
+  -webkit-user-select: none;
   -ms-user-select: none;
-  user-select: none; */
+  user-select: none;
   background-color: #fff;
 }
 
@@ -72,11 +72,6 @@ input[type="number"] {
   border: none;
 }
 
-/* .all-btn:hover {
-  background: #000;
-  color: #fff;
-} */
-
 .card-btn {
   width: 50%;
   padding: 10px;
@@ -94,13 +89,25 @@ input[type="number"] {
   right: 0;
 }
 
+.search-btn {
+  padding: 12px 30px;
+  box-shadow: 6px 8px 8px 8px;
+  background: linear-gradient(
+    180deg,
+    rgba(90, 155, 172, 1) 10%,
+    rgba(55, 92, 102, 1) 100%
+  );
+  color: #fff;
+  border-radius: 25px;
+}
+
 .card-btn :hover {
   background: #000;
   color: #fff;
 }
 
 .card-link {
-  padding: 6px;
+  padding: 6px 20px;
   border-radius: 16px 0px 16px 0px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   background: linear-gradient(
@@ -113,7 +120,6 @@ input[type="number"] {
   bottom: 0px;
   position: absolute;
   right: 0;
-  font-size: small;
   text-decoration: none;
   display: flex;
   align-items: center;
@@ -125,7 +131,7 @@ input[type="number"] {
   width: 100%;
   height: 100%;
   margin-top: 40px;
-  /* padding: 80px; */
+  background: #fff;
 }
 
 .swiper-slide {
@@ -139,13 +145,16 @@ input[type="number"] {
 }
 
 .product-cards {
-  border: 2px solid rgb(179, 179, 179);
+  outline:  1px solid rgb(179, 179, 179);
   border-radius: 1.2rem;
-  padding: 6px;
+  padding: 8px;
   height: 100%;
-  min-height: 370px;
+  min-height: 350px;
   display: flex;
   flex-direction: column;
+  cursor: pointer;
+  position: relative;
+  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
 }
 
 .arrow-box {
@@ -197,7 +206,6 @@ input[type="number"] {
   transition: 0.1s ease !important;
 }
 
-
 .swiper-container {
   padding: 45px !important;
 }
@@ -218,4 +226,97 @@ input[type="number"] {
   color: #000;
   transition: 0.2s ease-in-out;
   border: 1px solid #fff;
+}
+
+.subscribe-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(55, 92, 101, 1);
+  padding: 2px;
+  border-radius: 50px;
+  width: 100%;
+  max-width: 350px;
+  margin-top: 24px;
+}
+
+.subscribe-input .MuiOutlinedInput-root {
+  border-radius: 50px;
+  background-color: #fff;
+  padding-right: 0;
+  width: 100%;
+  max-width: 400px;
+}
+
+.subscribe-input .MuiOutlinedInput-root fieldset {
+  border: none;
+}
+
+.subscribe-input .MuiOutlinedInput-input {
+  padding: 12px 20px;
+  font-size: 16px;
+}
+
+.subscribe-button {
+  border-radius: 50px;
+  padding: 10px 30px;
+  background-color: rgba(55, 92, 101, 1);
+  color: #fff;
+  text-transform: none;
+  font-size: 16px;
+  font-weight: 500;
+  box-shadow: none;
+  margin-left: -40px;
+}
+
+.subscribe-button:hover {
+  background-color: #000;
+  box-shadow: none;
+}
+
+@media (max-width: 899px) {
+  .subscribe-container {
+    flex-direction: column;
+    padding: 10px;
+    margin: auto;
+    margin-top: 15px;
+    background-color: #fff;
+  }
+
+  .subscribe-input .MuiOutlinedInput-root {
+    width: 100%;
+  }
+
+  .subscribe-button {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .subscribe-container {
+    padding: 1rem;
+  }
+
+  .subscribe-input .MuiOutlinedInput-input {
+    font-size: 14px;
+    padding: 10px 15px;
+  }
+
+  .subscribe-button {
+    font-size: 14px;
+    padding: 8px 20px;
+  }
+}
+
+
+.best-text{
+  color: #fff;
+  background: #000;
+  padding: 1rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  height: 100vh;
 }
